attempt to fix comment reply button on mobile

--- a/frontend/static/css/components/comments.css
+++ b/frontend/static/css/components/comments.css
@@ -190,6 +190,11 @@
             color: var(--opposite-text-color);
         }
 
+        .comment-reply-button {
+            background: none;
+            border: none;
+        }
+
         .comment-footer i {
             font-size: 70%;
         }
